# amp

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json
.cache/clangd/index/: filepath.cpp.D2C2652DD3E05481.idx  filepath.h.726D7B890BA1ADCA.idx  main.cpp.9829F83FAA221913.idx  playlist.cpp.9B0683F0A6AEC2DA.idx  playlist.h.DF9CAA88B4B41183.idx
include/: filepath.h  playlist.h
src/: filepath.cpp  main.cpp  playlist.cpp
